--- a/lmsbook.html
+++ b/lmsbook.html
@@ -22,36 +22,41 @@
             </marquee>
         </div>
     </div>
-    <div id="BCA"><li class="bcaa">B.C.A.(Bachelor of Computer Application)</li>
-       <a href="linux new.pdf"><img src="Linux.jpeg" alt=""></a>
-        <a href="computer fundamental.pdf"><img src="cf.jpeg" alt=""></a>
-        <a href="networking.pdf"><img src="network.jpeg" alt=""></a>
-        <a href="c++++.pdf"><img src="c++.jpeg" alt=""></a>
-        <img src="python.jpeg" alt="">
-        <img src="mysql.jpeg" alt="">
+    <div id="BCA">
+        <li class="bcaa">B.C.A.(Bachelor of Computer Application)</li>
+          <div> <a href="linux new.pdf"><img src="Linux.jpeg" alt=""></a> </div>
+          <div> <a href="computer fundamental.pdf"><img src="cf.jpeg" alt=""></a>  </div>
+          <div> <a href="networking.pdf"><img src="network.jpeg" alt=""></a>  </div>
+          <div> <a href="c++++.pdf"><img src="c++.jpeg" alt=""></a>
+          <div> <img src="python.jpeg" alt="">  </div>
+          <div> <img src="mysql.jpeg" alt="">  </div>
     </div>
-    <div id="MCA"><li class="mcaa">M.C.A.(Master of computer Application)</li>
-        <a href="artificial intelligence new.pdf"><img src="ins.jpeg" alt=""></a>
-        <a href="os new.pdf"><img src="os.jpeg" alt=""></a>
-        <a href="python new.pdf"><img src="python.jpeg" alt=""></a>
-        <img src="clc.jpeg" alt="">
-        <img src="ins.jpeg" alt="">
-        <img src="soe.jpeg" alt="">
+    <div id="MCA">
+     <li class="mcaa">M.C.A.(Master of computer Application)</li>
+       <div> <a href="artificial intelligence new.pdf"><img src="ins.jpeg" alt=""></a>  </div>
+       <div> <a href="os new.pdf"><img src="os.jpeg" alt=""></a>  </div>
+       <div> <a href="python new.pdf"><img src="python.jpeg" alt=""></a>  </div>
+       <div> <img src="clc.jpeg" alt="">  </div>
+       <div> <img src="ins.jpeg" alt="">  </div>
+       <div> <img src="soe.jpeg" alt="">  </div>
     </div>
-    <div id="BBA"><li class="bbaa">B.B.A.(Bachelor of Business Application)</li>
-      <a href="bussines analysis new.pdf"><img src="bua.jpeg" alt=""></a> 
-       <img src="dm.jpeg" alt="">
-       <img src="sme.jpeg" alt="">
-       <img src="meco.jpeg" alt="">
-       <img src="buc.jpeg" alt="">
-       <img src="opm.jpeg" alt="">
+    <div id="BBA"> 
+        <li class="bbaa">B.B.A.(Bachelor of Business Application)</li> 
+          <div>  <a href="bussines analysis new.pdf"><img src="bua.jpeg" alt=""></a>  </div>
+          <div>  <img src="dm.jpeg" alt="">  </div>
+          <div>  <img src="sme.jpeg" alt="">  </div>
+          <div>  <img src="meco.jpeg" alt="">  </div>
+          <div>  <img src="buc.jpeg" alt="">  </div>
+          <div>  <img src="opm.jpeg" alt="">  </div>
     </div>
-    <div id="MBA"><li class="mbaa">M.B.A.(Master of Business Application)</li>
-      <a href="bussines communication.pdf"><img src="bucom.jpeg" alt=""></a>
-      <img src="coml.jpeg" alt="">
-      <img src="marm.jpeg" alt="">
-      <img src="accop.jpeg" alt="">
-      <img src="businte.jpeg" alt="">
+    <div id="MBA">
+        <li class="mbaa">M.B.A.(Master of Business Application)</li>
+          <div> <a href="bussines communication.pdf"><img src="bucom.jpeg" alt=""></a>  </div>
+          <div> <img src="coml.jpeg" alt="">  </div>
+          <div> <img src="marm.jpeg" alt="">  </div>
+          <div> <img src="accop.jpeg" alt="">  </div>
+          <div> <img src="businte.jpeg" alt="">  </div>
+    </div>
       <img src="corf.jpeg" alt="">
     </div>
 </body>
