--- a/lmsbook.html
+++ b/lmsbook.html
@@ -30,7 +30,7 @@
               <a href="networking.pdf"><img src="network.jpeg" alt=""></a> 
               <a href="c++++.pdf"><img src="c++.jpeg" alt=""></a>
               <img src="python.jpeg" alt=""> 
-              <img src="mysql.jpeg" alt=""> 
+<!--               <img src="mysql.jpeg" alt="">  -->
          </div>
     <div id="MCA">
      <li class="mcaa">M.C.A.(Master of computer Application)</li>
