--- a/lmsbook.html
+++ b/lmsbook.html
@@ -30,7 +30,7 @@
               <a href="networking.pdf"><img src="network.jpeg" alt=""></a> 
               <a href="c++++.pdf"><img src="c++.jpeg" alt=""></a>
               <img src="python.jpeg" alt=""> 
-<!--               <img src="mysql.jpeg" alt="">  -->
+              <img src="mysql.jpeg" alt=""> 
          </div>
     <div id="MCA">
      <li class="mcaa">M.C.A.(Master of computer Application)</li>
@@ -40,7 +40,7 @@
            <a href="python new.pdf"><img src="python.jpeg" alt=""></a>  
            <img src="clc.jpeg" alt="">  
            <img src="ins.jpeg" alt="">  
-<!--            <img src="soe.jpeg" alt="">   -->
+           <img src="soe.jpeg" alt="">  
       </div>
     <div id="BBA"> 
         <li class="bbaa">B.B.A.(Bachelor of Business Application)</li> 
@@ -50,7 +50,7 @@
              <img src="sme.jpeg" alt="">  
              <img src="meco.jpeg" alt="">  
              <img src="buc.jpeg" alt="">  
-<!--              <img src="opm.jpeg" alt="">  -->
+              <img src="opm.jpeg" alt=""> 
          </div>
     <div id="MBA">
         <li class="mbaa">M.B.A.(Master of Business Application)</li>
@@ -60,7 +60,7 @@
               <img src="marm.jpeg" alt="">  
               <img src="accop.jpeg" alt="">  
               <img src="businte.jpeg" alt=""> 
-<!--               <img src="corf.jpeg" alt=""> -->
+              <img src="corf.jpeg" alt="">
        </div>
     </div>
 </body>
